--- a/style.css
+++ b/style.css
@@ -10,12 +10,14 @@
 body {
   font-family: "Ubuntu", sans-serif;
   background-color: #fff;
+  background-color: rgba(0, 173, 181, 1);
+	background: linear-gradient(to right, rgba(0, 173, 181, 1), #f4b0b0) no-repeat 0 0 / cover;
 }
 
 section {
-  height: 100vh;
+  /* height: 100vh; */
 }
-
+/* 
 .banner {
   background: rgb(255, 255, 255);
   background: linear-gradient(
@@ -23,7 +25,7 @@ section {
     rgba(255, 255, 255, 1) 0%,
     rgba(0, 173, 181, 1) 100%
   );
-}
+} */
 
 
 
@@ -49,14 +51,14 @@ section {
   }
 }
 
-.info-section {
+/* .info-section {
   background: rgb(224, 221, 170);
   background: linear-gradient(
     0deg,
     rgba(224, 221, 170, 1) 0%,
     rgba(255, 255, 255, 1) 100%
   );
-}
+} */
 
 .info-img img {
   width: 250px !important;
