--- a/login.css
+++ b/login.css
@@ -1,309 +1,90 @@
-
-:root {
-	--clr-primary: #F6F5F7;
-	--clr-secondary: rgba(0, 173, 181, 1);
-	--clr-background: #DDD;
-	--clr-white: #FFF;
-}
-
-* {
+body{
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
-}
-
-html {
-	font-size: 62.5%;
-}
-
-body {
-	font-family: 'ubuntu', sans-serif;
-	background: var(--clr-primary);
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 800px;
-}
-
-h1 {
-	font-size: 3rem;
-	font-weight: bold;
-}
-
-p {
-	font-size: 1.4rem;
-	font-weight: 100;
-	line-height: 2rem;
-	letter-spacing: .05rem;
-	margin: 2em 0 3em;
-}
-
-span {
-	font-size: 1.2rem;
-}
-
-a {
-	color: #333;
-	font-size: 1.4rem;
-	text-decoration: none;
-	margin: 1.5rem 0;
-}
-
-.container {
-	background: var(--clr-white);
-	position: relative;
+	min-height: 100vh;
+	font-family: 'Jost', sans-serif;
+	background: linear-gradient(to right, rgba(0, 173, 181, 1), #f4b0b0) no-repeat
+    0 0 / cover;}
+.main{
+	width: 350px;
+	height: 500px;
+	background: red;
 	overflow: hidden;
-	width: 100%;
+	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
+	border-radius: 10px;
+	box-shadow: 5px 20px 50px #000;
+}
+#chk{
+	display: none;
+}
+.signup{
+	position: relative;
+	width:100%;
 	height: 100%;
 }
-
-.form-container {
-	position: absolute;	
-	height: 100%;
-	transition: all 0.6s ease-in-out;
-}
-
-.sign-in-container {
-	top: 0;
-	height: 50%;
-	width: 100%;
-	z-index: 2;
-}
-
-.sign-up-container {
-	top: 0;
-	height: 50%;
-	width: 100%;
-	opacity: 0;
-	z-index: 1;
-}
-
-.form-container form {
-	background: var(--clr-white);
+label{
+	color: #fff;
+	font-size: 2.3em;
+	justify-content: center;
 	display: flex;
-	flex-direction: column;
-	padding: 0 6rem;
-	height: 100%;
+	margin: 60px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: .5s ease-in-out;
+}
+input{
+	width: 60%;
+	height: 20px;
+	background: #e0dede;
 	justify-content: center;
-	align-items: center;
-	text-align: center;
-}
-
-.social-container {
-	margin: 2rem 0;
-}
-
-.social-container a {
-	border: 1px solid var(--clr-background);
-	border-radius: 50%;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 .5rem;
-	height: 40px;
-	width: 40px;
-}
-
-.form-container input {
-	background: var(--clr-background);
+	display: flex;
+	margin: 20px auto;
+	padding: 10px;
 	border: none;
-	padding: 1rem 1.2rem;
-	margin: .6rem 0;
-	width: 100%;
-}
-
-button {
-	border-radius: 20px;
-	border: 1px solid var(--clr-secondary);
-	background: var(--clr-secondary);
-	color: var(--clr-white);
-	font-size: 1.2rem;
-	font-weight: bold;
-	padding: 1.2rem 5rem;
-	letter-spacing: .1rem;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
-}
-
-button:active {
-	transform: scale(0.95)
-}
-
-button:focus {
 	outline: none;
+	border-radius: 5px;
 }
-
-button.ghost {
-	background: transparent;
-	border-color: var(--clr-white);
-}
-
-.overlay-container {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 50%;
-	overflow: hidden;
-	transition: transform 0.6s ease-in-out;
-	z-index: 100;
-}
-
-.overlay {
-	/*For legacy browsers */
-	background-color: var(--clr-secondary);
-	background: linear-gradient(to right, rgba(0, 173, 181, 1), #f4b0b0) no-repeat 0 0 / cover;
-	color: var(--clr-white);
-	position: relative;
-	top: -100%;
-	width: 100%;
-	height: 200%;
-	transform: translateY(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.overlay-panel {
-	position: absolute;
-	display: flex;
-	flex-direction: column;
+button{
+	width: 60%;
+	height: 40px;
+	margin: 10px auto;
 	justify-content: center;
-	align-items: center;
-	padding: 0 4rem;
-	height: 50%;
-	width: 100%;
-	text-align: center;
-	transform: translateY(0);
-	transition: transform 0.6s ease-in-out;
+	display: block;
+	color: #fff;
+	background: #573b8a;
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 20px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: .2s ease-in;
+	cursor: pointer;
+}
+button:hover{
+	background: #6d44b8;
+}
+.login{
+	height: 460px;
+	background: #eee;
+	border-radius: 60% / 10%;
+	transform: translateY(-180px);
+	transition: .8s ease-in-out;
+}
+.login label{
+	color: #573b8a;
+	transform: scale(.6);
 }
 
-.overlay-right {
-	bottom: 0;
-	transform: translateY(0);
+#chk:checked ~ .login{
+	transform: translateY(-500px);
 }
-
-.overlay-left {
-	transform: translateY(-20%);
+#chk:checked ~ .login label{
+	transform: scale(1);	
 }
-
-
-/* Animation */
-
-/* Move sign in to the right */
-.container.right-panel-active .sign-in-container {
-	transform: translateY(100%);
-}
-
-/* Move overlay to left */
-.container.right-panel-active .overlay-container {
-	transform: translateY(-100%);
-}
-
-/* Bring sign up over sign in */
-.container.right-panel-active .sign-up-container {
-	transform: translateY(100%);
-	opacity: 1;
-	z-index: 5;
-}
-
-/* Move overlay back to right */
-.container.right-panel-active .overlay {
-	transform: translateY(50%);
-}
-
-/* Sliding effect left */
-.container.right-panel-active .overlay-left {
-	transform: translateY(0);
-}
-
-/* Sliding effect right */
-.container.right-panel-active .overlay-right {
-	transform: translateY(20%);
-}
-
-@media only screen and (min-width: 961px) {
-	
-	body {
-		height: 100vh;
-	}
-	
-	.container {	
-		border-radius: 10px;
-		box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-		width: 768px;		
-		max-width: 100%; 		
-		height: 480px;
-	}
-
-	.sign-in-container {
-		left: 0;
-		width: 50%;
-		height: 100%;
-	}
-	
-	.sign-up-container {
-		left: 0;
-		width: 50%;
-		height: 100%;
-	}
-
-	.overlay-container {
-		left: 50%;
-		width: 50%;
-		height: 100%;
-	}
-	
-	.overlay {
-		top: 0;
-		left: -100%;
-		width: 200%;
-		height: 100%;
-		transform: translateX(0);
-	}
-
-	.overlay-panel {
-		height: 100%;
-		width: 50%;
-		transform: translateX(0);
-	}
-
-	.overlay-right {
-		right: 0;
-		transform: translateX(0);
-	}
-
-	.overlay-left {
-		transform: translateX(-20%);
-	}	
-
-	/* Animation */
-
-	/* Move sign in to the right */
-	.container.right-panel-active .sign-in-container {
-		transform: translateX(100%);
-	}
-
-	/* Move overlay to left */
-	.container.right-panel-active .overlay-container {
-		transform: translateX(-100%);
-	}
-
-	/* Bring sign up over sign in */
-	.container.right-panel-active .sign-up-container {
-		transform: translateX(100%);
-	}
-
-	/* Move overlay back to right */
-	.container.right-panel-active .overlay {
-		transform: translateX(50%);
-	}
-
-	/* Sliding effect left */
-	.container.right-panel-active .overlay-left {
-		transform: translateX(0);
-	}
-
-	/* Sliding effect right */
-	.container.right-panel-active .overlay-right {
-		transform: translateX(20%);
-	}
+#chk:checked ~ .signup label{
+	transform: scale(.6);
 }
